# stereo-visual-odometry

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: feature_tracker.hpp  motion_estimator.hpp  triangulation.hpp  visual_odometry.hpp
src/: feature_tracker.cpp  motion_estimator.cpp  triangulation.cpp  visual_odometry.cpp
tests/: main.cpp  webcam_live.cpp
